--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
 
     
 <!-- Analytics -->
- 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GEF7WEJGBK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GEF7WEJGBK');
+</script>
 <!-- Analytics END -->
     
 </head>
