suppression du fichier et-line.css

--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="accueil, site internet, la panthère, entreprise webdesign Lyon">
     <meta name="description" content="La Panthère est une entreprise de weddesign à Lyon qui accompage les entreprises à devenir attractives grâce à un site Internet d'excellente qualité">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="./img/favicon.jpg">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">	
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 
     <title>accueil La Panthère entreprise webdesign Lyon</title>
 
@@ -40,9 +38,6 @@
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
-					<li>
-						<a href="index.html">Accueil</a>
-					</li>
 					<li>
 						<a href="contact.php">Contact</a>
 					</li>
@@ -82,7 +77,7 @@
 		<div class="row voffset-lg med-width-whitespace">
 			<div class="col-sm-4">
 				<div class="text-center">
-					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+					<img class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" src="img/webdesign.png">
 				</div>
 				<h3 class="mg-md text-center">
 					Web design
@@ -93,7 +88,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
-					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+					<img class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" src="img/strategie.png">
 				</div>
 				<h3 class="mg-md text-center">
 					&nbsp;Stratégie
@@ -104,7 +99,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
-					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+					<img class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" src="img/illustrations.png">
 				</div>
 				<h3 class="mg-md text-center">
 					Illustrations
