--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,15 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="contact, seo, google, site web, site internet, agence webdesign Lyon">
     <meta name="description" content="La Panthère est une entreprise de weddesign à Lyon qui accompage les entreprises à devenir attractives grâce à un site Internet d'excellente qualité">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="robots" content="index, follow">
-	<link rel="shortcut icon" type="image/png" href="./img/favicon.jpg">
+	<link rel="shortcut icon" type="image/png" href="./img/favicon.webp">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 	
     <title>contact La Panthère entreprise webdesign Lyon</title> 
 
@@ -47,9 +45,6 @@
 					<li>
 						<a href="index.html">Accueil</a>
 					</li>
-					<li>
-						<a href="contact.html">Contact</a>
-					</li>
 				</ul>
 			</div>
 		</nav>
@@ -74,12 +69,12 @@
 	</div>
 </div>
 <!-- bloc-6 END -->
-<?php
+<!--<?php
 $nom  = $_POST['name'];
 $email  = $_POST['email'];
 $origine  = $_POST['origine'];
 $message  = $_POST['message'];
-?>
+?>-->
 <!-- bloc-7 -->
 <div class="bloc bgc-white l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
@@ -90,19 +85,19 @@ $message  = $_POST['message'];
 						<label>
 							Nom
 						</label>
-						<input id="name" name="name" placeholder="Dupont" class="form-control" value="<?php echo isset($nom) ? $nom : '';?>" required>
+						<input id="name" name="name" placeholder="Dupont" class="form-control" value="" required>
 					</div>
 					<div class="form-group">
 						<label>
 							Adresse email
 						</label>
-						<input id="email" name="email" placeholder="jean.dupont@site.org" class="form-control" type="email" required value="<?php echo isset($email) ? $email : '';?>" pattern="[a-zA-Z0-9\-\._]*@[a-zA-Z0-9\-\._]*.[a-zA-Z]*">
+						<input id="email" name="email" placeholder="jean.dupont@site.org" class="form-control" type="email" required value="" pattern="[a-zA-Z0-9\-\._]*@[a-zA-Z0-9\-\._]*.[a-zA-Z]*">
 					</div>
 					<div class="form-group">
 						<label>
 							Comment nous avez-vous connus ?
 						</label>
-						<input id="origine" name="origine" class="form-control" type="email" required  />
+						<textarea id="origine" name="origine" class="form-control" required></textarea>
 					</div>
 					<div class="form-group">
 						<label>
@@ -110,7 +105,7 @@ $message  = $_POST['message'];
 						</label>
 						<textarea id="message" name="message" class="form-control" rows="4" cols="50" required></textarea>
 					</div>
-					<?php 
+<!--					<?php 
 					if (isset($_POST['soumettre'])) {
 						$name = $_POST['name'];
 						$email = $_POST['email'];
@@ -129,7 +124,7 @@ $message  = $_POST['message'];
 						header('Location: priseencompte.php');
 						echo 'Message pris en compte';
 						}
-						?>
+						?> -->
 					<input class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" name="soumettre" value="Envoyer">
 	<!--				<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
