--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,13 @@
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-	
+
+	<script src="./js/jquery-2.1.0.min.js"></script>
+	<script src="./js/bootstrap.min.js"></script>
+	<script src="./js/blocs.min.js"></script>
+	<script src="./js/jqBootstrapValidation.min.js"></script>
+	<script src="./js/formHandler.min.js"></script>
+
     <title>contact La Panthère entreprise webdesign Lyon</title> 
 
 <!-- Analytics -->
@@ -27,30 +33,30 @@
     
 </head>
 <body>
-<!-- Principal conteneur -->
 <main class="page-container">
-    
-<!-- bloc-0 -->
-<header class="bloc bgc-white l-bloc " id="bloc-0">
+
+<header class="bloc bgc-white l-bloc ">
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo la panthère entreprise webdesigne Lyon" height="40" /></a>
-				<!-- <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-				</button> -->
+				</button>
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
 						<a href="index.html">Accueil</a>
 					</li>
+					<li>
+						<a href="contact.html">Contact</a>
+					</li>
 				</ul>
 			</div>
 		</nav>
 	</div>
 </header>
-<!-- bloc-0 END -->
 
 <!-- bloc-6 -->
 <div class="bloc bg-dots-bg bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-6">
@@ -69,12 +75,6 @@
 	</div>
 </div>
 <!-- bloc-6 END -->
-<!--<?php
-$nom  = $_POST['name'];
-$email  = $_POST['email'];
-$origine  = $_POST['origine'];
-$message  = $_POST['message'];
-?>-->
 <!-- bloc-7 -->
 <div class="bloc bgc-white l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
