--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">	
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	
+	<script src="./js/jquery-2.1.0.min.js"></script>
+	<script src="./js/bootstrap.min.js"></script>
+	<script src="./js/blocs.min.js"></script>
+	<script src="./js/jquery.touchSwipe.min.js" defer></script>
+	<script src="./js/gmaps.min.js"></script>
 
     <title>accueil La Panthère entreprise webdesign Lyon</title>
 
@@ -29,14 +35,20 @@
 
 <main class="page-container">
     
-<header class="bloc bgc-white l-bloc " id="bloc-0">
+<header class="bloc bgc-white l-bloc ">
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" loading="lazy" alt="logo la panthère entreprise webdesigne Lyon" height="40" /></a>
+				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+				</button>
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
+					<li>
+						<a href="index.html">Accueil</a>
+					</li>
 					<li>
 						<a href="contact.html">Contact</a>
 					</li>
@@ -48,13 +60,13 @@
 
 <!-- bloc-1-presentation -->
 	
-<section id="bloc-1-hero" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax">
+<section class="bloc bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/logo.webp" class="center-block image-resize-mode" loading="lazy" width="100" alt="logo la panthère entreprise webdesigne Lyon" />
 				<h1 class="text-center hero-bloc-text tc-tangerine ">
-					Agence La Panthère
+					Agence La Panthère<br>Entreprise webdesign Lyon
 				</h1>
 				<div class="text-center">
 					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
@@ -62,8 +74,7 @@
 			</div>
 		</div>
 	</div>
-</section>
-<!-- bloc-1-presentation END -->
+</section> <!-- bloc bg-banniere  -->
 
 <!-- bloc-2-services -->
 <section class="bloc bgc-white l-bloc" id="bloc-2-services">
@@ -186,7 +197,7 @@
 		</div>
 	</div>
 </section><!-- bloc-4-portfolio -->
-<section id="bloc-5-cta" class="bloc bgc-dark-slate-blue d-bloc bloc-bg-texture bg-banniere texture-paper">
+<section id="bloc-5-cta" class="bloc d-bloc bloc-bg-texture bg-banniere texture-paper">
 	<div class="container bloc-lg">
 		<div class="row">
 			<h2 class="mg-md text-center white">
