--- a/index.html
+++ b/index.html
@@ -34,11 +34,16 @@
 <body>
 
 <main class="page-container">
-    
+ 
 <header class="bloc bgc-white l-bloc ">
+	<a class="navbar-brand logo-w3c-css" href="http://jigsaw.w3.org/css-validator/check/referer">
+		<img style="border:0;width:88px;height:31px"
+			src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+			alt="CSS Valide !" /> </a> 
 	<div class="container bloc-sm">
-		<nav class="navbar row">
+		<nav class="navbar row">				
 			<div class="navbar-header">
+				
 				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" loading="lazy" alt="logo la panthère entreprise webdesigne Lyon" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
