couleur et tailles police ajout partenaires

--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 
-	<script src="./js/jquery-2.1.0.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/blocs.min.js"></script>
-	<script src="./js/jqBootstrapValidation.min.js"></script>
-	<script src="./js/formHandler.min.js"></script>
+	<script defer src="./js/jquery-2.1.0.min.js"></script>
+	<script defer src="./js/bootstrap.min.js"></script>
+	<script defer src="./js/blocs.min.js"></script>
+	<script defer src="./js/jqBootstrapValidation.min.js"></script>
+	<script defer src="./js/formHandler.min.js"></script>
 
     <title>contact La Panthère entreprise webdesign Lyon</title> 
 
@@ -36,6 +36,10 @@
 <main class="page-container">
 
 <header class="bloc bgc-white l-bloc ">
+	<a class="navbar-brand logo-w3c-css" href="http://jigsaw.w3.org/css-validator/check/referer">
+		<img class="logocss" 
+			src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+			alt="CSS Valide !" /> </a> 
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
@@ -153,6 +157,14 @@
 						</div>
 					</div>
 				</div>
+				<div class="row">
+							Partenaires
+								<ul>
+									<li><a href="https://www.ammi77.fr/">ammi informatique vente réparation hardware et software de tout matériel informatique</a></li>
+									<li><a href="https://www.ibm.com/fr-fr">IBM - France fournisseur de nos matériels et logiciels</a></li>
+									<li><a href="https://openclassrooms.com/fr">OpenClassrooms école 100% en ligne où sont formés nos webdesigners</a></li>
+								</ul>		
+					</div>
 			</div>
 		</div>
 	</div>
