--- a/contact.html
+++ b/contact.html
@@ -118,6 +118,7 @@
 				<p class="tc-tangerine">
 					christine.delacourt@laposte.net<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 				</p>
+				<iframe class="plan" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.0829510559133!2d4.827592376000283!3d45.76952781301525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4ebfdfc439d99%3A0xed28854c1870df0d!2sAgence%20La%20Panth%C3%A8re!5e0!3m2!1sfr!2sfr!4v1684514680406!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			</div>
 		</div>
 	</div>
