--- a/contact.html
+++ b/contact.html
@@ -39,11 +39,11 @@
 	<a class="navbar-brand logo-w3c-css" href="http://jigsaw.w3.org/css-validator/check/referer">
 		<img class="logocss" 
 			src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-			alt="CSS Valide !" /> </a> 
+			alt="CSS Valide !"> </a> 
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo la panthère entreprise webdesigne Lyon" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo la panthère entreprise webdesigne Lyon" height="40"></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -133,7 +133,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center tc-tangerine">
+				<p class="text-center tc-black">
 					Agence La Panthère - Agence web basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
@@ -159,13 +159,15 @@
 					</div>
 				</div>
 				<div class="row">
+					<div class="col-sm-4">
 							Partenaires
 								<ul>
-									<li><a href="https://www.ammi77.fr/">ammi informatique vente réparation hardware et software de tout matériel informatique</a></li>
-									<li><a href="https://www.ibm.com/fr-fr">IBM - France fournisseur de nos matériels et logiciels</a></li>
-									<li><a href="https://openclassrooms.com/fr">OpenClassrooms école 100% en ligne où sont formés nos webdesigners</a></li>
+									<li><a href="https://www.ammi77.fr">https://www.ammi77.fr</a></li>
+									<li><a href="https://www.ibm.com/fr-fr">https://www.ibm.com/fr-fr</a></li>
+									<li><a href="https://openclassrooms.com/fr">https://openclassrooms.com/fr</a></li>
 								</ul>		
 					</div>
+				</div>
 			</div>
 		</div>
 	</div>
