--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<script defer src="./js/jquery-2.1.0.min.js"></script>
 	<script defer src="./js/bootstrap.min.js"></script>
 	<script defer src="./js/blocs.min.js"></script>
-	<script defer src="./js/jquery.touchSwipe.min.js" defer></script>
+	<script defer src="./js/jquery.touchSwipe.min.js"></script>
 	<script defer src="./js/gmaps.min.js"></script>
 
     <title>accueil La Panthère entreprise webdesign Lyon</title>
@@ -39,12 +39,12 @@
 	<a class="navbar-brand logo-w3c-css" href="http://jigsaw.w3.org/css-validator/check/referer">
 		<img class="logocss" 
 			src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-			alt="CSS Valide !" /> </a> 
+			alt="CSS Valide !"></a> 
 	<div class="container bloc-sm">
 		<nav class="navbar row">				
 			<div class="navbar-header">
 				
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" loading="lazy" alt="logo la panthère entreprise webdesigne Lyon" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" loading="lazy" alt="logo la panthère entreprise webdesigne Lyon" height="40"></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span>
 					<span class="icon-bar"></span><span class="icon-bar"></span>
@@ -72,7 +72,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.webp" class="center-block image-resize-mode" loading="lazy" width="100" alt="logo la panthère entreprise webdesigne Lyon"/>
+				<img src="img/logo.webp" class="center-block image-resize-mode" loading="lazy" width="100" alt="logo la panthère entreprise webdesign Lyon">
 				<h1 class="text-center hero-bloc-text tc-white">
 					Agence La Panthère<br>Entreprise webdesign Lyon
 				</h1>
@@ -207,7 +207,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<h2 class="mg-md text-center tc-white">
-				Prêt pour redonner vie à votre projet ?<br>Contatez notre équipe !
+				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h2>
 		</div>
 	</div>
@@ -243,13 +243,15 @@
 					</div>
 				</div> <!-- row row-no-gutters social -->
 				<div class="row">
+					<div class="col-sm-4">
 							Partenaires
 								<ul>
-									<li><a href="https://www.ammi77.fr/">Ammi informatique vente réparation hardware et software de tout matériel informatique</a></li>
-									<li><a href="https://www.ibm.com/fr-fr">IBM - France fournisseur de nos matériels et logiciels</a></li>
-									<li><a href="https://openclassrooms.com/fr">OpenClassrooms école 100% en ligne où sont formés nos webdesigners</a></li>
+									<li><a href="https://www.ammi77.fr">https://www.ammi77.fr</a></li>
+									<li><a href="https://www.ibm.com/fr-fr">https://www.ibm.com/fr-fr</a></li>
+									<li><a href="https://openclassrooms.com/fr">https://openclassrooms.com/fr</a></li>
 								</ul>		
 					</div>
+				</div>
 			</div>
 		</div>
 	</div>
