--- a/contact.html
+++ b/contact.html
@@ -139,22 +139,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/AgencePanthere"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="https://twitter.com/AgencePanthere" target="_blank"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.facebook.com/people/Agence-La-Panth%C3%A8re"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="https://www.facebook.com/people/Agence-La-Panth%C3%A8re" target="_blank"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://dribble.com"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="https://dribble.com" target="_blank"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="https://www.instagram.com/" target="_blank"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
@@ -162,9 +162,9 @@
 					<div class="col-sm-4">
 							Partenaires
 								<ul>
-									<li><a href="https://www.ammi77.fr">https://www.ammi77.fr</a></li>
-									<li><a href="https://www.ibm.com/fr-fr">https://www.ibm.com/fr-fr</a></li>
-									<li><a href="https://openclassrooms.com/fr">https://openclassrooms.com/fr</a></li>
+									<li><a href="https://www.ammi77.fr" target="_blank">https://www.ammi77.fr</a></li>
+									<li><a href="https://www.ibm.com/fr-fr" target="_blank">https://www.ibm.com/fr-fr</a></li>
+									<li><a href="https://openclassrooms.com/fr" target="_blank">https://openclassrooms.com/fr</a></li>
 								</ul>		
 					</div>
 				</div>
