--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/logo.webp" class="center-block image-resize-mode" loading="lazy" width="100" alt="logo la panthère entreprise webdesign Lyon">
-				<h1 class="text-center hero-bloc-text tc-white">
+				<h1 class="text-center hero-bloc-text tc-black bgc-atomic-tangerine">
 					Agence La Panthère<br>Entreprise webdesign Lyon
 				</h1>
 			</div>
@@ -85,7 +85,7 @@
 <section class="bloc bgc-white l-bloc" id="bloc-2-services">
 	<div class="container bloc-md">
 		<div class="row">
-			<div class="col-sm-12 text-center"><h2 class="mg-md text-center tc-white">L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.
+			<div class="col-sm-12 text-center"><h2 class="mg-md text-center tc-black">L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.
 			</h2>
 			</div>
 		</div>
@@ -97,7 +97,7 @@
 				<h3 class="mg-md text-center">
 					Web design
 				</h3>
-				<p class="text-center tc-tangerine">
+				<p class="text-center tc-black">
 					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
 			</div>
@@ -108,7 +108,7 @@
 				<h3 class="mg-md text-center">
 					&nbsp;Stratégie
 				</h3>
-				<p class="text-center tc-tangerine">
+				<p class="text-center tc-black">
 					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
 				</p>
 			</div>
@@ -119,13 +119,13 @@
 				<h3 class="mg-md text-center">
 					Illustrations
 				</h3>
-				<p class="text-center tc-tangerine">
+				<p class="text-center tc-black">
 					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 				</p>
 			</div>
 		</div>
 		<div class="row voffset-lg voffset">
-			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center tc-black">
 				<blockquote>"L'agence La Panthère est une excellente agence web!<br>
 				Les web designers ont réussi à capturer l'essence de notre entreprise<br>
 			et à l'intégrer à notre site. Cela nous a aidés à doubler nos ventres en ligne à Lyon."<br>
@@ -155,7 +155,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h2 class="mg-md text-center tc-tangerine">
+				<h2 class="mg-md text-center tc-black">
 					Nous travaillons avec beaucoup de clients,<br>voici nos réalisations.<br>
 				</h2>
 			</div>
@@ -166,7 +166,7 @@
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
-				<p class="text-center tc-tangerine">
+				<p class="text-center tc-black">
 					Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 				</p>
 			</div>
@@ -175,7 +175,7 @@
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
-				<p class="text-center tc-tangerine">
+				<p class="text-center tc-black">
 					Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 				</p>
 			</div>
@@ -186,7 +186,7 @@
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
-				<p class="text-center tc-tangerine">
+				<p class="text-center tc-black">
 					Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 				</p>
 			</div>
@@ -195,7 +195,7 @@
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
-				<p class="text-center tc-tangerine">
+				<p class="text-center tc-black">
 					Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
 				</p>
 			</div>
@@ -215,8 +215,8 @@
 <footer class="bloc bgc-atomic-tangerine d-bloc">
 	<div class="container bloc-sm">
 		<div class="row">
-			<div class="col-sm-12">
-				<p class="text-center white">
+			<!--<div class="col-sm-12">-->
+				<p class="text-center tc-black">
 					Agence La Panthère - Agence web basée à Lyon.<br>
 				</p>
 				
@@ -242,8 +242,8 @@
 						</div>
 					</div>
 				</div> <!-- row row-no-gutters social -->
-				<div class="row">
-					<div class="col-sm-4">
+				<div class="row row-no-gutters social">
+					<div class="col-sm-4 tc-black">
 							Partenaires
 								<ul>
 									<li><a href="https://www.ammi77.fr" target="_blank">https://www.ammi77.fr</a></li>
@@ -252,9 +252,9 @@
 								</ul>		
 					</div>
 				</div>
-			</div>
+			<!--</div>-->
 		</div>
-	</div>
+	</div><!-- container bloc-sm -->
 </footer>
 </main>
 </body>
