--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					Web design
 				</h3>
 				<p class="text-center tc-black">
-					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fiers.
 				</p>
 			</div>
 			<div class="col-sm-4">
@@ -128,7 +128,7 @@
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center tc-black">
 				<blockquote>"L'agence La Panthère est une excellente agence web!<br>
 				Les web designers ont réussi à capturer l'essence de notre entreprise<br>
-			et à l'intégrer à notre site. Cela nous a aidés à doubler nos ventres en ligne à Lyon."<br>
+			et à l'intégrer à notre site. Cela nous a aidés à doubler nos ventes en ligne à Lyon."<br>
 		<cite>Maxime Guibard, PDG de A vos fourchettes</cite></blockquote>
 			</div>
 		</div>
