--- a/index.html
+++ b/index.html
@@ -233,12 +233,12 @@
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://dribble.com"><span class="fa fa-dribbble icon-md" target="_blank"></span></a>
+							<a class="social" href="https://dribble.com" target="_blank"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md" target="_blank"></span></a>
+							<a class="social" href="https://www.instagram.com/" target="_blank"><span class="fa fa-instagram icon-md" target="_blank"></span></a>
 						</div>
 					</div>
 				</div> <!-- row row-no-gutters social -->
