correction target _blank

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com/" target="_blank"><span class="fa fa-instagram icon-md" target="_blank"></span></a>
+							<a class="social" href="https://www.instagram.com/" target="_blank"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div> <!-- row row-no-gutters social -->
