h1 en blanc footer revu

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 	<script defer src="./js/jqBootstrapValidation.min.js"></script>
 	<script defer src="./js/formHandler.min.js"></script>
 
-    <title>contact La Panthère entreprise webdesign Lyon</title> 
+    <title>contact - La Panthère entreprise webdesign Lyon</title> 
 
 <!-- Analytics -->
  <!-- Google tag (gtag.js) -->
@@ -53,9 +53,6 @@
 					<li>
 						<a href="index.html">Accueil</a>
 					</li>
-					<li>
-						<a>Contact</a>
-					</li>
 				</ul>
 			</div>
 		</nav>
@@ -67,7 +64,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
-				<h1 class="text-center hero-bloc-text tc-black bgc-atomic-tangerine">
+				<h1 class="text-center hero-bloc-text tc-white">
 					Parlons web design !
 				</h1>
 				<p class="text-center mg-lg tc-white tight-width-whitespace">
@@ -158,14 +155,25 @@
 						</div>
 					</div>
 				</div>
-				<div class="row row-no-gutters social">
-					<div class="col-sm-4  tc-black">
-							Partenaires
-								<ul>
-									<li><a href="https://www.ammi77.fr" target="_blank">https://www.ammi77.fr</a></li>
-									<li><a href="https://www.ibm.com/fr-fr" target="_blank">https://www.ibm.com/fr-fr</a></li>
-									<li><a href="https://openclassrooms.com/fr" target="_blank">https://openclassrooms.com/fr</a></li>
-								</ul>		
+				<p class="text-center tc-black">
+					Partenaires<br>
+				</p>
+					<div class="row row-no-gutters social">
+						<div class="col-sm-4 tc-black">
+							<div class="text-center">	
+										<a href="https://openclassrooms.com/fr" target="_blank">OpenClassrooms</a>			
+							</div>				
+						</div>
+						<div class="col-sm-4 tc-black">
+							<div class="text-center">	
+										<a href="https://www.ibm.com/fr-fr" target="_blank">Ibm</a>			
+							</div>				
+						</div>
+						<div class="col-sm-4 tc-black">
+							<div class="text-center">	
+										<a href="https://www.ammi77.fr" target="_blank">AMMI77</a>							
+							</div>				
+						</div>
 					</div>
 				</div>
 			</div>
