--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<script defer src="./js/jquery.touchSwipe.min.js"></script>
 	<script defer src="./js/gmaps.min.js"></script>
 
-    <title>accueil La Panthère entreprise webdesign Lyon</title>
+    <title>accueil - La Panthère entreprise webdesign Lyon</title>
 
 <!-- Analytics -->
 <!-- Google tag (gtag.js) -->
@@ -53,9 +53,6 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a>Accueil</a>
-					</li>
-					<li>
 						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
@@ -73,7 +70,7 @@
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/logo.webp" class="center-block image-resize-mode" loading="lazy" width="100" alt="logo la panthère entreprise webdesign Lyon">
-				<h1 class="text-center hero-bloc-text tc-black bgc-atomic-tangerine">
+				<h1 class="text-center hero-bloc-text tc-white">
 					Agence La Panthère<br>Entreprise webdesign Lyon
 				</h1>
 			</div>
@@ -242,14 +239,24 @@
 						</div>
 					</div>
 				</div> <!-- row row-no-gutters social -->
+				<p class="text-center tc-black">
+					Partenaires<br>
+				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-4 tc-black">
-							Partenaires
-								<ul>
-									<li><a href="https://www.ammi77.fr" target="_blank">https://www.ammi77.fr</a></li>
-									<li><a href="https://www.ibm.com/fr-fr" target="_blank">https://www.ibm.com/fr-fr</a></li>
-									<li><a href="https://openclassrooms.com/fr" target="_blank">https://openclassrooms.com/fr</a></li>
-								</ul>		
+						<div class="text-center">	
+									<a href="https://openclassrooms.com/fr" target="_blank">OpenClassrooms</a>			
+						</div>				
+					</div>
+					<div class="col-sm-4 tc-black">
+						<div class="text-center">	
+									<a href="https://www.ibm.com/fr-fr" target="_blank">Ibm</a>			
+						</div>				
+					</div>
+					<div class="col-sm-4 tc-black">
+						<div class="text-center">	
+									<a href="https://www.ammi77.fr" target="_blank">AMMI77</a>							
+						</div>				
 					</div>
 				</div>
 			<!--</div>-->
