ajout aria-label et .htaccess

--- a/contact.html
+++ b/contact.html
@@ -136,22 +136,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/AgencePanthere" target="_blank"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="https://twitter.com/AgencePanthere" target="_blank" aria-label="lien vers twitter"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.facebook.com/people/Agence-La-Panth%C3%A8re" target="_blank"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="https://www.facebook.com/people/Agence-La-Panth%C3%A8re" target="_blank" aria-label="lien vers facebook"></a>><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://dribble.com" target="_blank"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="https://dribble.com" target="_blank" aria-label="lien vers dribble"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com/" target="_blank"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="https://www.instagram.com/" target="_blank" aria-label="lien vers instagram"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
@@ -161,17 +161,17 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-4 tc-black">
 							<div class="text-center">	
-										<a href="https://openclassrooms.com/fr" target="_blank">OpenClassrooms</a>			
+										<a href="https://openclassrooms.com/fr" target="_blank" aria-label="lien vers openclassrooms">OpenClassrooms</a>			
 							</div>				
 						</div>
 						<div class="col-sm-4 tc-black">
 							<div class="text-center">	
-										<a href="https://www.ibm.com/fr-fr" target="_blank">Ibm</a>			
+										<a href="https://www.ibm.com/fr-fr" target="_blank" aria-label="lien vers IBM">Ibm</a>			
 							</div>				
 						</div>
 						<div class="col-sm-4 tc-black">
 							<div class="text-center">	
-										<a href="https://www.ammi77.fr" target="_blank">AMMI77</a>							
+										<a href="https://www.ammi77.fr" target="_blank" aria-label="lien vers AMMI77">AMMI77</a>							
 							</div>				
 						</div>
 					</div>
