--- a/index.html
+++ b/index.html
@@ -220,22 +220,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/AgencePanthere" target="_blank"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="https://twitter.com/AgencePanthere" target="_blank" aria-label="lien vers twitter"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.facebook.com/people/Agence-La-Panth%C3%A8re" target="_blank"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="https://www.facebook.com/people/Agence-La-Panth%C3%A8re" target="_blank" aria-label="lien vers facebook"></a>><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://dribble.com" target="_blank"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="https://dribble.com" target="_blank" aria-label="lien vers dribble"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com/" target="_blank"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="https://www.instagram.com/" target="_blank" aria-label="lien vers instagram"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div> <!-- row row-no-gutters social -->
