--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.facebook.com/people/Agence-La-Panth%C3%A8re" target="_blank" aria-label="lien vers facebook"></a>><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="https://www.facebook.com/people/Agence-La-Panth%C3%A8re" target="_blank" aria-label="lien vers facebook"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
