--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
-				<h1 class="text-center hero-bloc-text tc-white">
+				<h1 class="text-center hero-bloc-text tc-tangerine">
 					Parlons web design !
 				</h1>
 				<p class="text-center mg-lg tc-white tight-width-whitespace">
@@ -86,25 +86,25 @@
 						<label>
 							Nom
 						</label>
-						<input id="name" name="name" placeholder="Dupont" class="form-control" value="" required>
+						<input id="name" name="name" placeholder="Dupont" class="form-control" value="" required aria-label="champ du formualire pour renseigner le nom">
 					</div>
 					<div class="form-group">
 						<label>
 							Adresse email
 						</label>
-						<input id="email" name="email" placeholder="jean.dupont@site.org" class="form-control" type="email" required value="" pattern="[a-zA-Z0-9\-\._]*@[a-zA-Z0-9\-\._]*.[a-zA-Z]*">
+						<input id="email" name="email" placeholder="jean.dupont@site.org" class="form-control" type="email" required value="" pattern="[a-zA-Z0-9\-\._]*@[a-zA-Z0-9\-\._]*.[a-zA-Z]*" aria-label="champ du formualire pour renseigner l email">
 					</div>
 					<div class="form-group">
 						<label>
 							Comment nous avez-vous connus ?
 						</label>
-						<textarea id="origine" name="origine" class="form-control" required></textarea>
+						<textarea id="origine" name="origine" class="form-control" required aria-label="champ du formualire pour dire comment vous nous avez connus"></textarea>
 					</div>
 					<div class="form-group">
 						<label>
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 						</label>
-						<textarea id="message" name="message" class="form-control" rows="4" cols="50" required></textarea>
+						<textarea id="message" name="message" class="form-control" rows="4" cols="50" aria-label="champ du formualire pour donner des détails de votre projet" required></textarea>
 					</div>
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
@@ -161,17 +161,17 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-4 tc-black">
 							<div class="text-center">	
-										<a href="https://openclassrooms.com/fr" target="_blank" aria-label="lien vers openclassrooms">OpenClassrooms</a>			
+										<a href="https://openclassrooms.com/fr" target="_blank">OpenClassrooms</a>			
 							</div>				
 						</div>
 						<div class="col-sm-4 tc-black">
 							<div class="text-center">	
-										<a href="https://www.ibm.com/fr-fr" target="_blank" aria-label="lien vers IBM">Ibm</a>			
+										<a href="https://www.ibm.com/fr-fr" target="_blank">Ibm</a>			
 							</div>				
 						</div>
 						<div class="col-sm-4 tc-black">
 							<div class="text-center">	
-										<a href="https://www.ammi77.fr" target="_blank" aria-label="lien vers AMMI77">AMMI77</a>							
+										<a href="https://www.ammi77.fr" target="_blank">AMMI77</a>							
 							</div>				
 						</div>
 					</div>
