--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/logo.webp" class="center-block image-resize-mode" loading="lazy" width="100" alt="logo la panthère entreprise webdesign Lyon">
-				<h1 class="text-center hero-bloc-text dark-tangerine">
+				<h1 class="text-center hero-bloc-text tc-white">
 					Agence La Panthère<br>Entreprise webdesign Lyon
 				</h1>
 			</div>
