retour sur fond ecran

--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
 
 <!-- bloc-1-presentation -->
 	
-<!--CD Suppression des class bg-t-edge et texture-paper 
-	 <section class="bloc bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"> -->
-	<section class="bloc bg-banniere d-bloc bloc-bg-texture b-parallax">
+	 <section class="bloc bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
