bouton texte noir

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 		</div>
 	</div>
 </section><!-- bloc-4-portfolio -->
-<div id="bloc-5-cta" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper">
+<section id="bloc-5-cta" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper">
 	<div class="container bloc-lg">
 		<div class="row">
 			<h2 class="mg-md text-center white">
